<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--  主页面 -->
    <string name="app_name">TestBianq</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titlef">家庭理财通</string>
    <string name="txtZhiC">支出管理</string>
    <string name="txtShouR">收入管理</string>
    <string name="txtbianq">便签管理</string>
    <string name="txtshez">设置</string>
    <string name="Biaot">最新便签</string>
    <string name="txtBianq">如果你无法简洁的表达你的想法，那只说明你还不够了解它。</string>
    <string name="ZuoZ">--阿尔博特.爱因斯坦</string>
    <string name="Times">2016年9月7日  15:40</string>
    <string name="txtTuiC">退出</string>
    <!-- 便签管理页面 -->
     <string name="txtGuanl">便签管理</string>
     <string name="txtAdd">添加便签</string>
     <string name="txtContentTitle">老王问我借钱</string>
     <string name="txtAddtime">2016年9月12日 ，周日14:50</string>
    <!-- 便签编辑页面 -->
</resources>
