<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
   style="@style/LinearLayoutone"
    android:background="@drawable/background"> 

   <LinearLayout
       style="@style/LinearLayoutTwo"
       android:layout_width="match_parent"
       android:layout_height="200dp"
       android:background="@drawable/bottomback" >
 
   <ImageView
            android:id="@+id/imageButt"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/bianq"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
             />
    <TextView 
        android:text="@string/txtGuanl" 
        android:textSize="18pt" 
        android:textColor="#607d8b"
        android:textStyle="bold"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_weight="1" 
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:typeface="monospace"
        />       
    </LinearLayout>   
    <LinearLayout 
       android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical" 
    >

     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="64dp"
         android:background="@drawable/bavktwo" >

         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:src="@drawable/zjbianq" 
             android:layout_gravity="center"
             android:layout_marginLeft="40dp"/>

         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/txtAdd"
             android:textColor="#4F4F4F" 
             android:textSize="12pt"
             android:layout_marginTop="15dp"
             android:layout_marginLeft="20dp"
             />

     </LinearLayout>

     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="1"
         android:orientation="vertical" >

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="78dp"
             android:layout_marginTop="20dp"
             android:background="#ffffff"
             android:orientation="horizontal" >

             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
                 android:src="@drawable/bianq" />

             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_marginTop="0px"
                 android:background="@style/Transparent"
                 android:orientation="vertical" >

                 <TextView
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp"
                     android:text="@string/txtContentTitle"
                     android:textSize="8pt"
                     android:textColor="#101010"
                      />

                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="20dp"
                     android:text="@string/txtAddtime"
                     android:textSize="8pt"
                     android:textColor="#101010"
                      />
             </LinearLayout>

             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="0dp"
                 android:src="@drawable/tub" />
         </LinearLayout>

         
     </LinearLayout>

    </LinearLayout>   
    
</LinearLayout> 
